# audio-transcribe

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  benchmark.py  compare_align.py  format_transcript.py  install.sh  out.json  preprocess.py  pyproject.toml  test_ollama.py  transcribe_whisperx.py  verify_diarize.py
.claude/commands/: release.md
.gitea/workflows/: mirror-to-github.yaml
audio_transcribe/: __init__.py  cli.py  log.py  models.py  pipeline.py  preflight.py  update.py  util.py
audio_transcribe/markdown/: __init__.py  parser.py  updater.py
audio_transcribe/progress/: __init__.py  composite.py  events.py  json_reporter.py  tui.py
audio_transcribe/quality/: __init__.py  scorecard.py
audio_transcribe/speakers/: __init__.py  database.py  embeddings.py
audio_transcribe/stages/: __init__.py  align.py  correct.py  diarize.py  diarize_update.py  format.py  identify.py  loader.py  preprocess.py  transcribe.py  update.py
audio_transcribe/stats/: __init__.py  estimator.py  hardware.py  recommender.py  store.py
docs/plans/: 2026-02-28-reactive-pipeline-design.md  2026-02-28-reactive-pipeline-plan.md  2026-02-28-unified-cli-design.md  2026-02-28-unified-cli-plan.md  2026-03-02-people-card-updater-design.md  2026-03-02-people-card-updater-plan.md  2026-03-02-process-meeting-enhancements-design.md  2026-03-02-process-meeting-enhancements-plan.md  2026-03-02-task-extraction-design.md  2026-03-02-task-extraction-plan.md  2026-03-05-hardening-design.md  2026-03-05-hardening-plan.md  2026-03-05-hf-token-fallback-design.md  2026-03-05-installer-and-distribution-design.md  2026-03-05-release-skill-design.md
scripts/: mirror-to-github.sh
tests/: test_benchmark.py  test_cli.py  test_cli_process.py  test_compare_align.py  test_diarize_command.py  test_diarize_enrollment.py  test_format_transcript.py  test_identify_command.py  test_identify_integration.py  test_integration.py  test_markdown_parser.py  test_markdown_updater.py  test_models.py  test_ollama_utils.py  test_pipeline.py  test_preflight.py  test_preprocess.py  test_reactive_integration.py  test_speaker_db.py  test_speakers_cli.py  test_transcribe_whisperx.py  test_update.py  test_update_command.py  test_util.py  test_verify_diarize.py
tests/progress/: test_composite.py  test_events.py  test_json_reporter.py
tests/quality/: test_scorecard.py
tests/stages/: test_align.py  test_correct.py  test_diarize.py  test_format.py  test_loader.py  test_preprocess.py  test_transcribe.py
tests/stats/: test_estimator.py  test_hardware.py  test_recommender.py  test_store.py
