[project]
name = "audio-transcribe"
version = "0.1.0"
description = "Local audio transcription pipeline: WhisperX + Ollama"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "whisperx>=3.8.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
]

[project.scripts]
audio-transcribe = "audio_transcribe.cli:app"

[project.optional-dependencies]
mlx = [
    "mlx-whisper>=0.4.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "types-pyyaml>=6.0",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "ANN"]
ignore = ["ANN401"]  # Any is needed for untyped ML libraries (whisperx, torch)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"audio_transcribe/cli.py" = ["B008"]  # typer.Argument/Option in defaults is idiomatic

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true  # whisperx/torch have no stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

# Setup:
#   uv sync
#   export HF_TOKEN=hf_...
#
# Diarization requires a HuggingFace token with pyannote licenses accepted:
#   https://huggingface.co/pyannote/speaker-diarization-3.1
#   https://huggingface.co/pyannote/speaker-diarization-community-1
#
# M4 note: float16 crashes with ctranslate2 — always use int8:
#   whisperx.load_model("large-v3", device="cpu", compute_type="int8")
